<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adam.phoneutilities.FlashlightTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flashlightTest_header"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/flashlightTestOnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashlightTest_on_button"/>

        <Button
            android:id="@+id/flashlightTestOffButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashlightTest_off_button"/>

    </LinearLayout>

</RelativeLayout>
