<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#7198d6"
            android:textSize="24sp"
            android:id="@+id/latitudeText"
            android:gravity="center_vertical"
            android:layout_gravity="start"
            android:layout_marginStart="10sp"
            android:text="Latitude: "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#7198d6"
            android:textSize="24sp"
            android:id="@+id/longitudeText"
            android:gravity="center_vertical"
            android:layout_gravity="end"
            android:text="Longitude: "/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="95sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ad6d14"
            android:textSize="55sp"
            android:id="@+id/speedText"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="Speed: "/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#999"
            android:textSize="30sp"
            android:id="@+id/odometerText"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="0.00 Miles"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#999"
            android:textColor="#000"
            android:textSize="30sp"
            android:id="@+id/resetOdometerButton"
            android:layout_gravity="end"
            android:layout_marginEnd="10sp"
            android:text="@string/reset_odometer_button"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#999"
            android:textSize="30sp"
            android:id="@+id/maxSpeedText"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="Max speed: 0.00 MPH"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#999"
            android:textColor="#000"
            android:textSize="30sp"
            android:id="@+id/resetMaxSpeedButton"
            android:layout_gravity="end"
            android:layout_marginEnd="10sp"
            android:text="@string/reset_max_speed_button"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#999"
            android:textColor="#8e0000"
            android:textSize="30sp"
            android:id="@+id/stopSpeedometerServiceButton"
            android:layout_gravity="start"
            android:layout_marginStart="10sp"
            android:text="@string/stop_speedometer_service_button"/>
    </FrameLayout>

</LinearLayout>